# humanize-etna

./: .gitignore  BUGS.md  TASKS.md  etna.toml
etna/: pyproject.toml
etna/etna_runner/: __init__.py  properties.py  runner.py  strategies.py  witnesses.py
etna/tests/: test_property_apnumber_zero_is_zero.py  test_property_intcomma_ndigits_zero_rounds.py  test_property_intword_preserves_sign.py  test_property_metric_finite_on_zero.py  test_property_naturaldelta_negative_is_absolute.py  test_property_naturaldelta_subseconds_are_milliseconds.py  test_property_naturalsize_int_for_small_floats.py  test_witnesses.py
patches/: apnumber_zero_off_by_one_2f179b6_1.patch  intcomma_ndigits_zero_03863fe_1.patch  intword_negative_no_sign_520aac1_1.patch  metric_zero_crash_b1ee687_1.patch  naturaldelta_negative_components_b939b2e_1.patch  naturaldelta_subsecond_872d733_1.patch  naturalsize_float_int_cast_11e62ee_1.patch
